# snaptastic

./: .gitignore  Dockerfile  README.md  fly.toml  manage.py  pyproject.toml
client/: package.json  vite.config.js
frontend/: index.html  package.json  vite.config.js
frontend/src/: App.vue
snaptastic/: asgi.py  settings.py  wsgi.py
snaptastic/templates/: base.html
