[tool.poetry]
name = "snaptastic"
version = "1.0"
description = "Photo booth app."
authors = ["Ray Luna <leon.luna.ray@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.5"
python-decouple = "^3.8"
django-cors-headers = "^4.2.0"
djangorestframework = "^3.14.0"
gunicorn = "^21.2.0"
whitenoise = "^6.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
